Adds text styles for pop-up "write us".

--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@
       <h2 class="visually-hidden">Форма обратной связи</h2>
       <form method="get" action="https://echo.htmlacademy.ru/">
         <label for="client-name">Ваше имя:</label>
-        <input type="text" id="client-name" name="client-name" placeholder="Имя Фамилия">
+        <input type="text" id="client-name" name="client-name" placeholder="Имя Фамилия" class="name-input">
         <label for="email">Ваш e-mail:</label>
-        <input type="email" id="email" name="email" placeholder="email@example.com">
+        <input type="email" id="email" name="email" placeholder="email@example.com" class="email-input">
         <label for="message">Текст письма:</label>
-        <textarea name="message" id="message" placeholder="В свободной форме"></textarea>
+        <textarea name="message" id="message" placeholder="В свободной форме" class="message-input"></textarea>
         <button type="submit" class="link-btn">отправить</button>
         <button type="button" class="close-btn" aria-label="Закрыть форму">&times;</button>
       </form>
