--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="index.html" class="logo">device</a>
       <div class="header-panel">
         <form method="get" action="https://echo.htmlacademy.ru/" class="header-panel-form">
-          <input type="search" placeholder="Поиск по сайту" class="search-field">
+          <input type="search" placeholder="Поиск по сайту" class="search-field" aria-label="Поиск по сайту">
           <input type="submit" value="Найти" class="search-btn">
         </form>
         <a href="#" class="site-link login">Войти</a>
@@ -21,7 +21,7 @@
       </div>
       <nav class="header-nav">
         <ul class="main-menu">
-          <li class="menu-item"><a href="catalog.html" class="menu-link">каталог товаров</a>
+          <li class="menu-item sub-menu"><a href="catalog.html" class="menu-link">каталог товаров</a>
             <ul class="catalog-submenu">
               <li class="catalog-item"><a href="#" class="site-link">Виртуальная реальность</a></li>
               <li class="catalog-item"><a href="#" class="site-link">Моноподы для селфи</a></li>
