--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
       <a href="index.html" class="logo">device</a>
       <div class="header-panel">
         <form method="get" action="https://echo.htmlacademy.ru/" class="header-panel-form">
-          <input type="search" placeholder="Поиск по сайту" class="search-field" aria-label="Поиск по сайту">
+          <label for="search-field" class="search-label">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+              <path d="M15.7 14.3l-3.104-3.104A6.979 6.979 0 0 0 14 7a7 7 0 1 0-7 7 6.963 6.963 0 0 0 4.193-1.404L14.3 15.7c.185.184.38.3.7.3a1 1 0 0 0 1-1 .93.93 0 0 0-.3-.7zM2 7c0-2.762 2.238-5 5-5s5 2.238 5 5-2.238 5-5 5-5-2.238-5-5z"/>
+            </svg>
+          </label>
+          <input type="search" placeholder="Поиск по сайту" name="search-text" id="search-field" class="search-field" aria-label="Поиск по сайту">
           <input type="submit" value="Найти" class="search-btn">
         </form>
         <a href="#" class="site-link login">Войти</a>
         <a href="#" class="site-link compare">Сравнить</a>
-        <a href="#" class="site-link basket">Корзина</a>
+        <a href="#" class="site-link cart">Корзина</a>
       </div>
       <nav class="header-nav">
         <ul class="main-menu">
@@ -202,9 +207,9 @@
     <footer class="site-footer">
       <div class="footer-top">
         <a href="index.html" class="logo">device</a>
-        <a href="#" class="site-link logout">Войти</a>
+        <a href="#" class="site-link login">Войти</a>
         <a href="#" class="site-link compare">Сравнить</a>
-        <a href="#" class="site-link basket">Корзина</a>
+        <a href="#" class="site-link cart">Корзина</a>
       </div>
       <div class="footer-mid">
         <p>г. Москва, ул. Строителей, 15</p>
