FIXES. First index page grid fixes.

--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
       <p class="user-name">Валентин Петухов</p>
       <a href="#" class="site-link logout">Выйти</a>
       <a href="#" class="site-link compare">Сравнить</a>
-      <a href="#" class="site-link basket">Корзина</a>
+      <a href="#" class="site-link cart">Корзина</a>
     </div>
     <nav class="header-nav">
       <ul class="main-menu">
@@ -139,7 +139,7 @@
       <p class="user-name">Валентин Петухов</p>
       <a href="#" class="site-link logout">Выйти</a>
       <a href="#" class="site-link compare">Сравнить</a>
-      <a href="#" class="site-link basket">Корзина</a>
+      <a href="#" class="site-link cart">Корзина</a>
     </div>
     <div class="footer-mid">
       <p>г. Москва, ул. Строителей, 15</p>
