FIX. Fixes elements' positions in header of catalog page. Adds styles for page title in body.

--- a/catalog.html
+++ b/catalog.html
@@ -12,25 +12,25 @@
     <a href="index.html" class="logo">device</a>
     <div class="header-panel">
       <form method="get" action="https://echo.htmlacademy.ru/" class="header-panel-form">
-        <label for="search-field"></label>
+        <!--<label for="search-field"></label>-->
         <input type="search" placeholder="Поиск по сайту" id="search-field" class="search-field" aria-label="Поиск по сайту">
         <input type="submit" value="Найти" class="search-btn">
       </form>
       <p class="user-name">Валентин Петухов</p>
-      <a href="#" class="site-link logout">Выйти</a>
+      <a href="#" class="cp- site-link logout">Выйти</a>
       <a href="#" class="site-link compare">Сравнить</a>
       <a href="#" class="site-link cart">Корзина</a>
     </div>
     <nav class="header-nav">
       <ul class="main-menu">
         <li class="menu-item sub-menu"><a href="catalog.html" class="menu-link">каталог товаров</a>
-          <ul class="items-list">
+          <ul class="catalog-submenu">
             <li class="catalog-item"><a href="#" class="site-link">Виртуальная реальность</a></li>
-            <li class="catalog-item"><a href="#" class="site-link">Моноподы для селфи</a></li>
-            <li class="catalog-item"><a href="#" class="site-link">Экшн-камеры</a></li>
             <li class="catalog-item"><a href="#" class="site-link">Фитнес-браслеты</a></li>
-            <li class="catalog-item"><a href="#" class="site-link">Умные часы</a></li>
             <li class="catalog-item"><a href="#" class="site-link">Квадрокоптеры</a></li>
+            <li class="catalog-item"><a href="#" class="site-link">Моноподы для селфи</a></li>
+            <li class="catalog-item"><a href="#" class="site-link">Умные часы</a></li>
+            <li class="catalog-item"><a href="#" class="site-link">Экшн-камеры</a></li>
           </ul>
         </li>
         <li class="menu-item"><a href="#" class="menu-link">доставка</a></li>
