--- a/catalog.html
+++ b/catalog.html
@@ -46,92 +46,98 @@
       <a href="catalog.html" class="crumb">Каталог товаров</a>
       <a class="crumb">Моноподы для селфи</a>
     </section>
-    <section class="filter">
-      <h2 class="section-title">фильтр:</h2>
-      <form method="get" action="https://echo.htmlacademy.ru/">
-        <fieldset>
-          <legend class="parameter-title">Стоимость</legend>
-          <div class="cost-range">
-            <div class="min-range-val" tabindex="0" aria-label="минимальная стоимость"></div>
-            <div class="max-range-val" tabindex="0" aria-label="максимальная стоимость"></div>
-          </div>
-        </fieldset>
-        <fieldset>
-          <legend class="parameter-title">Цвет</legend>
-          <input type="checkbox" id="check-black" name="black" value="black" class="color-check" checked>
-          <label for="check-black">Чёрный</label>
-          <input type="checkbox" id="check-white" name="white" class="color-check" value="white">
-          <label for="check-white">Белый</label>
-          <input type="checkbox" id="check-blue" name="blue" class="color-check" value="blue" checked>
-          <label for="check-blue">Синий</label>
-          <input type="checkbox" id="check-red" name="red" class="color-check" value="red" checked>
-          <label for="check-red">Красный</label>
-          <input type="checkbox" id="check-pink" name="pink" class="color-check" value="pink">
-          <label for="check-pink">Розовый</label>
-        </fieldset>
-        <fieldset>
-          <legend class="parameter-title">Bluetooth</legend>
-          <input type="radio" id="bt_on" name="bluetooth" value="on" class="bt-radio">
-          <label for="bt_on">Есть</label>
-          <input type="radio" id="bt_off" name="bluetooth" value="off" class="bt-radio">
-          <label for="bt_off">Нет</label>
-        </fieldset>
-        <button type="submit">показать</button>
-      </form>
-    </section>
-    <section class="sort-goods">
-      <h2 class="section-title">сортировка:</h2>
-      <a href="#" class="sort-attribute active-sort">По цене</a>
-      <a href="#" class="sort-attribute">По типу</a>
-      <a href="#" class="sort-attribute">По популярности</a>
-      <a href="#" class="sort-switch-btn up-switch active-switch" aria-label="по возрастанию"></a>
-      <a href="#" class="sort-switch-btn down-switch" aria-label="по убыванию"></a>
-    </section>
-    <section class="goods">
-      <article class="good-item">
-        <img src="img/catalog/goods/sst-common.png" alt="любительская селфи-палка" width="360" height="380">
-        <h3 class="good-name">Любительская селфи-палка</h3>
-        <p class="price">500 руб.</p>
-        <div class="good-hover-actions">
-          <a href="#" class="link-btn">в корзину</a>
-          <a href="#" class="link">Добавить к сравнению</a>
-        </div>
-      </article>
-      <article class="good-item">
-        <img src="img/catalog/goods/sst-professional.png" alt="профессиональная селфи-палка" width="360" height="380">
-        <h3 class="good-name">Профессиональная селфи-палка</h3>
-        <p class="price">1&nbsp;500 руб.</p>
-        <div class="good-hover-actions">
-          <a href="#" class="link-btn">в корзину</a>
-          <a href="#" class="link">Добавить к сравнению</a>
-        </div>
-      </article>
-      <article class="good-item">
-        <img src="img/catalog/goods/sst-waterprot.png" alt="непотопляемая селфи-палка" width="360" height="380">
-        <h3 class="good-name">Непотопляемая селфи-палка</h3>
-        <p class="price">2&nbsp;500 руб.</p>
-        <div class="good-hover-actions">
-          <a href="#" class="link-btn">в корзину</a>
-          <a href="#" class="link">Добавить к сравнению</a>
-        </div>
-      </article>
-      <article class="good-item new-item">
-        <img src="img/catalog/goods/sst-followme.png" alt="селфи-палка &laquo;Следуй за мной&raquo;" width="360" height="380">
-        <h3 class="good-name">Селфи-палка &laquo;Следуй за мной&raquo;</h3>
-        <p class="price">4&nbsp;900 руб.</p>
-        <div class="good-hover-actions">
-          <a href="#" class="link-btn">в корзину</a>
-          <a href="#" class="link">Добавить к сравнению</a>
-        </div>
-      </article>
-      <nav class="goods-page-nav" aria-label="навигация по каталогу">
-        <a href="#" class="nav-link">назад</a>
-        <a class="page-number active-page">1</a>
-        <a href="#" class="page-number">2</a>
-        <a href="#" class="page-number">3</a>
-        <a href="#" class="nav-link">вперёд</a>
-      </nav>
-    </section>
+    <div class="grid-wrapper">
+      <section class="filter">
+        <h2 class="section-title filter-title"><span>фильтр:</span></h2>
+        <form method="get" action="https://echo.htmlacademy.ru/" class="filter-form">
+          <fieldset>
+            <legend class="parameter-title">Стоимость</legend>
+            <div class="cost-range">
+              <div class="min-range-val" tabindex="0" aria-label="минимальная стоимость"></div>
+              <div class="max-range-val" tabindex="0" aria-label="максимальная стоимость"></div>
+            </div>
+          </fieldset>
+          <fieldset>
+            <legend class="parameter-title">Цвет</legend>
+            <input type="checkbox" id="check-black" name="black" value="black" class="color-check" checked>
+            <label for="check-black">Чёрный</label>
+            <input type="checkbox" id="check-white" name="white" class="color-check" value="white">
+            <label for="check-white">Белый</label>
+            <input type="checkbox" id="check-blue" name="blue" class="color-check" value="blue" checked>
+            <label for="check-blue">Синий</label>
+            <input type="checkbox" id="check-red" name="red" class="color-check" value="red" checked>
+            <label for="check-red">Красный</label>
+            <input type="checkbox" id="check-pink" name="pink" class="color-check" value="pink">
+            <label for="check-pink">Розовый</label>
+          </fieldset>
+          <fieldset>
+            <legend class="parameter-title">Bluetooth</legend>
+            <input type="radio" id="bt_on" name="bluetooth" value="on" class="bt-radio">
+            <label for="bt_on">Есть</label>
+            <input type="radio" id="bt_off" name="bluetooth" value="off" class="bt-radio">
+            <label for="bt_off">Нет</label>
+          </fieldset>
+          <button type="submit">показать</button>
+        </form>
+      </section>
+      <div class="goods-area">
+        <section class="sort-goods">
+          <h2 class="section-title sort-title">сортировка:</h2>
+          <a href="#" class="sort-attribute active-sort">По цене</a>
+          <a href="#" class="sort-attribute">По типу</a>
+          <a href="#" class="sort-attribute">По популярности</a>
+          <a href="#" class="sort-switch-btn up-switch active-switch" aria-label="по возрастанию"></a>
+          <a href="#" class="sort-switch-btn down-switch" aria-label="по убыванию"></a>
+        </section>
+        <section class="goods">
+          <article class="good-item">
+            <img src="img/catalog/goods/sst-common.png" alt="любительская селфи-палка" width="360" height="380">
+            <h3 class="good-name">Любительская селфи-палка</h3>
+            <p class="price">500 руб.</p>
+            <div class="good-hover-actions">
+              <a href="#" class="link-btn">в корзину</a>
+              <a href="#" class="link">Добавить к сравнению</a>
+            </div>
+          </article>
+          <article class="good-item">
+            <img src="img/catalog/goods/sst-professional.png" alt="профессиональная селфи-палка" width="360" height="380">
+            <h3 class="good-name">Профессиональная селфи-палка</h3>
+            <p class="price">1&nbsp;500 руб.</p>
+            <div class="good-hover-actions">
+              <a href="#" class="link-btn">в корзину</a>
+              <a href="#" class="link">Добавить к сравнению</a>
+            </div>
+          </article>
+          <article class="good-item">
+            <img src="img/catalog/goods/sst-waterprot.png" alt="непотопляемая селфи-палка" width="360" height="380">
+            <h3 class="good-name">Непотопляемая селфи-палка</h3>
+            <p class="price">2&nbsp;500 руб.</p>
+            <div class="good-hover-actions">
+              <a href="#" class="link-btn">в корзину</a>
+              <a href="#" class="link">Добавить к сравнению</a>
+            </div>
+          </article>
+          <article class="good-item new-item">
+            <img src="img/catalog/goods/sst-followme.png" alt="селфи-палка &laquo;Следуй за мной&raquo;" width="360" height="380">
+            <h3 class="good-name">Селфи-палка &laquo;Следуй за мной&raquo;</h3>
+            <p class="price">4&nbsp;900 руб.</p>
+            <div class="good-hover-actions">
+              <a href="#" class="link-btn">в корзину</a>
+              <a href="#" class="link">Добавить к сравнению</a>
+            </div>
+          </article>
+          <nav class="goods-page-nav" aria-label="навигация по каталогу">
+            <a href="#" class="nav-link back">назад</a>
+            <div class="page-numbers">
+              <a class="page-number active-page">1</a>
+              <a href="#" class="page-number">2</a>
+              <a href="#" class="page-number">3</a>
+            </div>
+            <a href="#" class="nav-link forward">вперёд</a>
+          </nav>
+        </section>
+      </div>
+    </div>
   </main>
   <footer class="site-footer">
     <div class="footer-top">
