Little style fixes.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               на ваш этаж.
             </p>
           </dd>
-          <dt class="service-name"><a href="#" class="service-link act-srv">Гарантия</a></dt>
+          <dt class="service-name"><a href="#" class="service-link act-srv"><span>Гарантия</span></a></dt>
           <dd class="service-desc visually-hidden">
             <h3>Гарантия</h3>
             <p>
