--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="site-header">
+    <header class="site-header index-header">
       <a href="index.html" class="logo">device</a>
       <div class="header-panel">
         <form method="get" action="https://echo.htmlacademy.ru/" class="header-panel-form">
