Adds first decoration styles for service section.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <h2 class="visually-hidden">Наши услуги</h2>
         <dl>
           <dt class="service-name"><a href="#" class="service-link act-srv">Доставка</a></dt>
-          <dd class="service-desc current-service">
+          <dd class="service-desc delivery current-service">
             <h3>Доставка</h3>
             <p>
               Мы с удовольствием доставим ваш товар прямо к вашему подъезду
@@ -135,8 +135,8 @@
               на ваш этаж.
             </p>
           </dd>
-          <dt class="service-name"><a href="#" class="service-link act-srv"><span>Гарантия</span></a></dt>
-          <dd class="service-desc visually-hidden">
+          <dt class="service-name"><a href="#" class="service-link act-srv">Гарантия</a></dt>
+          <dd class="service-desc warranty visually-hidden">
             <h3>Гарантия</h3>
             <p>
               Если из-за возгорания купленного у нас товара у вас сгорит
@@ -145,7 +145,7 @@
             </p>
           </dd>
           <dt class="service-name"><a href="#" class="service-link act-srv">Кредит</a></dt>
-          <dd class="service-desc visually-hidden">
+          <dd class="service-desc credit visually-hidden">
             <h3>Кредит</h3>
             <p>
               Залезть в долговую яму стало проще! Кредитные консультанты подберут
