FIX. Fixes classes in category section. Every item has its own unique class.

--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
       </div>
       <section class="categories">
         <h2 class="visually-hidden">Популярные товаров</h2>
-        <a href="#" class="link-popular">Виртуальная реальность</a>
-        <a href="#" class="link-popular">Моноподы&nbsp;для селфи</a>
-        <a href="#" class="link-popular">Экшн-камеры</a>
-        <a href="#" class="link-popular">Фитнес-браслеты</a>
-        <a href="#" class="link-popular">Умные часы</a>
-        <a href="#" class="link-popular">Квадрокоптеры</a>
+        <a href="#" class="link-popular popular-vr">Виртуальная реальность</a>
+        <a href="#" class="link-popular popular-selfie">Моноподы&nbsp;для селфи</a>
+        <a href="#" class="link-popular popular-action">Экшн-камеры</a>
+        <a href="#" class="link-popular popular-fitness">Фитнес-браслеты</a>
+        <a href="#" class="link-popular popular-smartw">Умные часы</a>
+        <a href="#" class="link-popular popular-quadrocopt">Квадрокоптеры</a>
       </section>
       <section class="service">
         <h2 class="visually-hidden">Наши услуги</h2>
