DRAFT. Adds hover and position styles for goods in catalog page. Also adds file with svg sprites.

--- a/catalog.html
+++ b/catalog.html
@@ -90,12 +90,14 @@
         </section>
         <section class="goods">
           <article class="good-item">
-            <img src="img/catalog/goods/sst-common.png" alt="любительская селфи-палка" width="360" height="380">
+            <a href="#" class="item-link">
+              <img src="img/catalog/goods/sst-common.png" alt="любительская селфи-палка" width="360" height="380">
+            </a>
             <h3 class="good-name">Любительская селфи-палка</h3>
             <p class="price">500 руб.</p>
             <div class="good-hover-actions">
-              <a href="#" class="link-btn">в корзину</a>
-              <a href="#" class="link">Добавить к сравнению</a>
+              <a href="#" class="link-btn cart-btn">в корзину</a>
+              <a href="#" class="link compare-link">Добавить к сравнению</a>
             </div>
           </article>
           <article class="good-item">
@@ -103,8 +105,8 @@
             <h3 class="good-name">Профессиональная селфи-палка</h3>
             <p class="price">1&nbsp;500 руб.</p>
             <div class="good-hover-actions">
-              <a href="#" class="link-btn">в корзину</a>
-              <a href="#" class="link">Добавить к сравнению</a>
+              <a href="#" class="link-btn cart-btn">в корзину</a>
+              <a href="#" class="link compare-link">Добавить к сравнению</a>
             </div>
           </article>
           <article class="good-item">
@@ -112,8 +114,8 @@
             <h3 class="good-name">Непотопляемая селфи-палка</h3>
             <p class="price">2&nbsp;500 руб.</p>
             <div class="good-hover-actions">
-              <a href="#" class="link-btn">в корзину</a>
-              <a href="#" class="link">Добавить к сравнению</a>
+              <a href="#" class="link-btn cart-btn">в корзину</a>
+              <a href="#" class="link compare-link">Добавить к сравнению</a>
             </div>
           </article>
           <article class="good-item new-item">
@@ -121,8 +123,8 @@
             <h3 class="good-name">Селфи-палка &laquo;Следуй за мной&raquo;</h3>
             <p class="price">4&nbsp;900 руб.</p>
             <div class="good-hover-actions">
-              <a href="#" class="link-btn">в корзину</a>
-              <a href="#" class="link">Добавить к сравнению</a>
+              <a href="#" class="link-btn cart-btn">в корзину</a>
+              <a href="#" class="link compare-link">Добавить к сравнению</a>
             </div>
           </article>
           <nav class="goods-page-nav" aria-label="навигация по каталогу">
