Adds hover styles for all goods and position price and name. Also adds nav-arrow as background image for bread crumbs.

--- a/catalog.html
+++ b/catalog.html
@@ -93,39 +93,53 @@
             <a href="#" class="item-link">
               <img src="img/catalog/goods/sst-common.png" alt="любительская селфи-палка" width="360" height="380">
             </a>
-            <h3 class="good-name">Любительская селфи-палка</h3>
-            <p class="price">500 руб.</p>
-            <div class="good-hover-actions">
+            <div class="item-info">
+              <h3 class="good-name">Любительская селфи-палка</h3>
+              <p class="price">500 руб.</p>
+            </div>
+            <p class="good-hover-actions">
               <a href="#" class="link-btn cart-btn">в корзину</a>
               <a href="#" class="link compare-link">Добавить к сравнению</a>
-            </div>
+            </p>
           </article>
           <article class="good-item">
-            <img src="img/catalog/goods/sst-professional.png" alt="профессиональная селфи-палка" width="360" height="380">
-            <h3 class="good-name">Профессиональная селфи-палка</h3>
-            <p class="price">1&nbsp;500 руб.</p>
-            <div class="good-hover-actions">
+            <a href="#" class="item-link">
+              <img src="img/catalog/goods/sst-professional.png" alt="профессиональная селфи-палка" width="360" height="380">
+            </a>
+            <div class="item-info">
+              <h3 class="good-name">Профессиональная селфи-палка</h3>
+              <p class="price">1&nbsp;500 руб.</p>
+            </div>
+            <p class="good-hover-actions">
               <a href="#" class="link-btn cart-btn">в корзину</a>
               <a href="#" class="link compare-link">Добавить к сравнению</a>
-            </div>
+            </p>
           </article>
           <article class="good-item">
-            <img src="img/catalog/goods/sst-waterprot.png" alt="непотопляемая селфи-палка" width="360" height="380">
-            <h3 class="good-name">Непотопляемая селфи-палка</h3>
-            <p class="price">2&nbsp;500 руб.</p>
-            <div class="good-hover-actions">
+            <a href="#" class="item-link">
+              <img src="img/catalog/goods/sst-waterprot.png" alt="непотопляемая селфи-палка" width="360" height="380">
+            </a>
+            <div class="item-info">
+              <h3 class="good-name">Непотопляемая селфи-палка</h3>
+              <p class="price">2&nbsp;500 руб.</p>
+            </div>
+            <p class="good-hover-actions">
               <a href="#" class="link-btn cart-btn">в корзину</a>
               <a href="#" class="link compare-link">Добавить к сравнению</a>
-            </div>
+            </p>
           </article>
           <article class="good-item new-item">
-            <img src="img/catalog/goods/sst-followme.png" alt="селфи-палка &laquo;Следуй за мной&raquo;" width="360" height="380">
-            <h3 class="good-name">Селфи-палка &laquo;Следуй за мной&raquo;</h3>
-            <p class="price">4&nbsp;900 руб.</p>
-            <div class="good-hover-actions">
+            <a href="#" class="item-link">
+              <img src="img/catalog/goods/sst-followme.png" alt="селфи-палка &laquo;Следуй за мной&raquo;" width="360" height="380">
+            </a>
+            <div class="item-info">
+              <h3 class="good-name">Селфи-палка &laquo;Следуй за мной&raquo;</h3>
+              <p class="price">4&nbsp;900 руб.</p>
+            </div>
+            <p class="good-hover-actions">
               <a href="#" class="link-btn cart-btn">в корзину</a>
               <a href="#" class="link compare-link">Добавить к сравнению</a>
-            </div>
+            </p>
           </article>
           <nav class="goods-page-nav" aria-label="навигация по каталогу">
             <a href="#" class="nav-link back">назад</a>
