Adds icons for links as inner svg image, deletes file "footer-sprite.svg".

--- a/index.html
+++ b/index.html
@@ -26,9 +26,24 @@
           <input type="search" placeholder="Поиск по сайту" name="search-text" id="search-field" class="search-field" aria-label="Поиск по сайту">
           <input type="submit" value="Найти" class="search-btn">
         </form>
-        <a href="#" class="site-link login">Войти</a>
-        <a href="#" class="site-link compare">Сравнить</a>
-        <a href="#" class="site-link cart">Корзина</a>
+        <a href="#" class="site-link login">
+          <svg width="13" height="12">
+            <use xlink:href="#icon-user"></use>
+          </svg>
+          Войти
+        </a>
+        <a href="#" class="site-link compare">
+          <svg width="10" height="10">
+            <use xlink:href="#icon-compare"></use>
+          </svg>
+          Сравнить
+        </a>
+        <a href="#" class="site-link cart">
+          <svg width="12" height="12">
+            <use xlink:href="#icon-cart"></use>
+          </svg>
+          Корзина
+        </a>
       </div>
       <nav class="header-nav">
         <ul class="main-menu">
