DRAFT. Adds black rectangle and large white numbers as pseudo elements of the slider elements' title.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <input id="el1" name="switch" type="radio">
         <input id="el2" name="switch" type="radio">
         <input id="el3" name="switch" type="radio">
-        <div class="slider-element">
+        <div class="slider-element slide-selfie">
           <div class="img-wrapper">
             <img src="img/index/slider/slider-1.png" alt="монопод для селфи" width="384" height="486">
           </div>
@@ -110,7 +110,7 @@
             </table>
           </div>
         </div>
-        <div class="slider-element visually-hidden">
+        <div class="slider-element slide-whatch visually-hidden">
           <div class="img-wrapper">
             <img src="img/index/slider/slider-2.png" alt="фитнес-браслет" width="345" height="485">
           </div>
@@ -129,7 +129,7 @@
             </tr>
           </table>
         </div>
-        <div class="slider-element visually-hidden">
+        <div class="slider-element slide-quadrocopt visually-hidden">
           <div class="img-wrapper">
             <img src="img/index/slider/slider-3.png" alt="квадрокоптер" width="526" height="334">
           </div>
